Alteração na develop

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </header>
 
   <section class="hero">
-    <h2>Bem-vindo ao meu site!</h2>
+    <h2>Bem-vindo ao meu site! (Alteração na develop)</h2>
     <p>Sou apaixonada por tecnologia, desenvolvimento e projetos sociais.</p>
     <a href="#contato" class="btn">Fale comigo</a>
   </section>
